<resources>

    <string name="app_name">ViewBhopal</string>
    <string name="addrate"> Rating click(1:10) </string>
    <string name="select_country">select country</string>
    <string name="place">place</string>
    <string name="country">country </string>
    <string name="email">username </string>
    <string name="pass">password </string>
    <string name="signgmail">Sign IN Gmail </string>

    <string name="login">login </string>
    <string name="signup">Sign Up </string>
    <string name="playvedio"> Show Video </string>
    <string name="enteremail">Enter Email </string>
    <string name="already_have_account">/Already have Account </string>
    <string name="retrievepass">Enter Password again </string>
    <string name="action_settings">Settings</string>
    <string name="createnewacc">Create New Account</string>
    <string name="title_activity_restaurants">Restaurants</string>
    <string name="title_activity_temples">Worship Places</string>
    <string name="title_activity_visitingplaces">Visiting Places</string>
    <string name="title_activity_bakenshake">Bake n Shake</string>
    <string name="title_activity_bapu">Bapu Ki Kutia</string>
    <string name="title_activity_hakeem">Lazeez Hakeem</string>
    <string name="title_activity_pizzeria">Da Pizzeria</string>
    <string name="title_activity_soorma">Soorma Bhopali</string>
    <string name="title_activity_abh">Amer Bakery Hut</string>
    <string name="title_activity_bhopalex">Bhopal Express</string>
    <string name="title_activity_hong">Hong Kong</string>
    <string name="title_activity_kafe">Kafe Kulture</string>
    <string name="title_activity_momo">Momo Cafe</string>
    <string name="title_activity_natural">Natural</string>
    <string name="title_activity_rice">Rice Bowl</string>
    <string name="title_activity_sagar">Sagar Gaire</string>
    <string name="title_activity_teatalks">Tea Talks</string>
    <string name="title_activity_tea_talks">Tea Talks</string>
    <string name="title_activity_wonder">Wonder Bread</string>
    <string name="title_activity_birla">Birla Temple</string>

    <string name="title_activity_bhoj">Bhojpur</string>
    <string name="title_activity_karfu">Karfu Wali Mata</string>
    <string name="title_activity_malai">"Malai Temple"</string>
    <string name="title_activity_mata">Salkanpur Mata Mandir</string>
    <string name="title_activity_gufa">Gufa Mandir</string>
    <string name="title_activity_jain">Jain Mandir</string>
    <string name="title_activity_kali">Kali Mandir</string>
    <string name="title_activity_moti">Moti Masajid</string>
    <string name="title_activity_sai">Sai Temple</string>
    <string name="title_activity_bari">KaliBari</string>
    <string name="title_activity_maa">Kankali Mandir</string>
    <string name="title_activity_guru">Gurudwara</string>
    <string name="title_activity_she">Sheetla Mata Mandir</string>
    <string name="title_activity_gan">Chintaman Ganesh</string>
    <string name="title_activity_neo">Neori Temple</string>
    <string name="title_activity_taj">Taj-Ul-Masajid</string>
    <string name="title_activity_bheem">Bheem Betika</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_van">Van Vihar</string>
    <string name="title_activity_gohar">Gohar Mahal</string>
    <string name="title_activity_manav">Manav Sanghralaya</string>
    <string name="title_activity_kanha">Kanha Fun City</string>
    <string name="title_activity_upper">Upper Lake</string>
    <string name="title_activity_sanchi">Sanchi Stoop</string>
    <string name="title_activity_birlam">Birla Museum</string>
    <string name="title_activity_science">Regional Science Center</string>
    <string name="title_activity_bharat">Bharat Bhavan</string>
    <string name="title_activity_shaurya">Shaurya Smarak</string>
    <string name="title_activity_sair">Sair Sapata</string>
    <string name="title_activity_people">People\'s Mall</string>
    <string name="title_activity_manua">Manua Bhan Ki Tekri</string>
    <string name="app_label">search</string>
    <string name="search_hint">search...</string>
    <string name="addcomment">Add a Comment...</string>
    <string name="hint_search">search</string>
    <string name="menu_search">search2</string>
    <string name="title_activity_contacys">contacysActivity</string>
    <string name="google_maps_key_instructions" templateMergeStrategy="replace"><!--

  TODO: Before you run your application, you need a Google Maps API key.

  To get one, follow this link, follow the directions and press "Create" at the end:

  https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX%3Bteamtreehouse.com.iamhere

  You can also add your credentials to an existing key, using this line:
  XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX;teamtreehouse.com.iamhere

  Once you have your key (it starts with "AIza"), replace the "google_maps_key"
  string in this file.
  --></string>

    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyC9enByVf1vTDoehLZEJTObbRIOtYyHOL0</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_visiting_place_detail">VisitingPlaceDetail</string>
    <string name="websities">Websities:-</string>
    <string name="rate">Rate:-</string>
    <string name="opening_hours">hRate:-</string>
    <string name="comment">Add Comment:-</string>
    <string name="cuisines">Cuisines:-</string>
    <string name="highlights">Highlights:-</string>
    <string name="cost">Cost:-</string>
    <string name="menu">Menu:-</string>
    <string name="map">Map</string>
    <string name="address_amp_contact"><![CDATA[Address & contact:-]]></string>
    <string name="todo">TODO</string>
    <string name="location">Location</string>
    <string name="good_for">Good For:-</string>
    <string name="entry_fee">Entry Fee:-</string>
    <string name="visit_duration">Visit Duration:-</string>
    <string name="about">About:-</string>
    <string name="websites">Websites:-</string>


</resources>
