<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Register">


    <EditText
        android:id="@+id/reg_email"
        android:layout_width="253dp"
        android:layout_height="60dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"

        android:ems="10"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="256dp"
        android:layout_height="65dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="175dp"
        android:ems="10"

        android:hint="@string/pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_confirm_pass"
        android:layout_width="261dp"
        android:layout_height="67dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="250dp"

        android:ems="10"
        android:hint="@string/retrievepass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="400dp"
        android:background="#009a9a"
        android:text="@string/signup"
        android:textColor="#d9e5f3" />
</RelativeLayout>
