<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:background="@drawable/back"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingRight="60dp">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="50dp"
                android:background="#0097A7"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:padding="16dp"
                android:text="Login"
                android:textColor="#d9e5f3"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="50dp"
                android:background="#0097A7"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:padding="16dp"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/signgmail"
                android:textColor="#d9e5f3" />

            <EditText
                android:id="@+id/usrusr"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-350dp"
                android:background="#00000000"
                android:hint="username"
                android:inputType="text"
                android:letterSpacing="0.1"
                android:text="@string/email"
                android:textColor="#fff"
                android:textColorHint="#d9e5f3"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/pswrdd"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:background="#00000000"
                android:hint="Password"
                android:inputType="textPassword"
                android:letterSpacing="0.1"
                android:text="@string/pass"
                android:textColor="#fff"
                android:textColorHint="#d9e5f3"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="439dp"
            android:layout_marginBottom="400dp"
            android:gravity="center">

            <ImageView
                android:layout_width="344dp"
                android:layout_height="88dp"
                android:background="@drawable/logo2" />
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
